     between scenarios.
   * Fixed possibility of corrupting saved games in certain instances,
     eg if an add-on tries to set an invalid variable
   * Fixed bug 23060: unit stat tooltips do not show.
   * wmllint, wmlscope, wmlindent and wmllint-1.4 now run on Python 3
   * Text boxes tab completion now lists friends and whisperer nicks for easier answer (bug #9742)
   * Fixed cases of wrong unit type used in planning moves (bug #20299)
   * Fixed hang when attempting to make a screenshot from a non-existent map via
     command-line (bug #20900)
   * Fixed Cancel Orders not working when loading MP game (bug #22133)
   * Fixed broken Oasis terrain help entry (bug #23023)
   * Fixed load game hot-key not working in the main menu (bug #23215)

Version 1.13.1:
 * Security fixes:
   * Disallowed inclusion of .pbl files from WML, independent of extension
     case (CVE-2015-5069, CVE-2015-5070, bug #23504).
 * AI:
   * Fast Micro AI: exclude hidden enemies from attack evaluation by default;
     add optional key attack_hidden_enemies to override this
   * Lua AI helper functions: fix bug crashing the AI when number= is not set in
     a unit attack definition
   * Micro AIs: add a warning and avoid crash when a non-existing side is used
     in the [micro_ai] tag
 * Campaigns:
   * Dead Water:
     * The Stun effect now expires at the stunned unit's side turn end
   * Under the Burning Suns:
     * The Stun effect now expires at the stunned unit's side turn end
 * Editor:
   * Redesigned Generate Map dialog to use a real listbox and remember the
     last choice during the same editor session.
   * Fixed stack corruption bug in the Side Setup dialog.
 * Graphics:
   * New generic portraits for the Walking Corpse and Soulless
 * Language and i18n:
   * Updated translations: Galician, Scottish Gaelic, Russian
 * Lua API:
   * New function wesnoth.get_viewing_side
   * New function wesnoth.remove_dialog_item
 * Multiplayer:
   * A New Land: