@@ -189,6 +189,7 @@ Version 1.13.1+dev:
    * Fixed bug 23060: unit stat tooltips do not show.
    * wmllint, wmlscope, wmlindent and wmllint-1.4 now run on Python 3
    * Text boxes tab completion now lists friends and whisperer nicks for easier answer (bug #9742)
+   * Avoid crash when planning moves on planned recruits (bug #18637)
    * Fixed cases of wrong unit type used in planning moves (bug #20299)
    * Fixed hang when attempting to make a screenshot from a non-existent map via
      command-line (bug #20900)
